# fcitx-yatable

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  cangjie5.conf.in  cangjie5.txt  wubi86.conf.in  wubi86.txt
src/: CMakeLists.txt  fcitx-yatable.c  fcitx-yatable.conf.in  fcitx-yatable.h  fcitx-yatable_session.c  fcitx-yatable_session.h  yatable.desc
